--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "use-mouse-move",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "author": "Charles Stover <use-mouse-move@charlesstover.com>",
   "description": "React hook for listening to mouse move events",
   "homepage": "https://www.npmjs.com/package/use-mouse-move",
   "license": "MIT",
   "main": "./dist/cjs/index.js",
-  "module": "./dist/esm/index.mjs",
+  "module": "./dist/esm/index.js",
   "repository": "https://github.com/CharlesStover/use-mouse-move",
   "type": "module",
   "types": "./types/index.d.ts",
@@ -24,7 +24,7 @@
   "publishConfig": {
     "access": "public",
     "main": "./dist/cjs/index.js",
-    "module": "./dist/esm/index.mjs"
+    "module": "./dist/esm/index.js"
   },
   "scripts": {
     "build": "rollup --config",
